--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
     </div>
 
     <script>
-        const apiKey = "";
+        const apiKey = "AIzaSyDToLibkHHZPh73rbRiVGik_QwT_je6JnM";
         let comicData = { title: "", creator: "", genre: "", style: "", charDesc: "", coverUrl: "", panels: [], currentIndex: -1 };
 
         // --- SISTEM TEKNIS ---
